Migrate Google login to auth code flow and harden production deploy config.
Co-authored-by: Cursor <cursoragent@cursor.com>